<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalculatorActivity" >

    <EditText
        android:id="@+id/etItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btTen"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etItem"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="33dp"
        android:text="@string/button_value" />

    <Button
        android:id="@+id/btFifteen"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btTen"
        android:layout_alignBottom="@+id/btTen"
        android:layout_centerHorizontal="true"
        android:text="@string/button_value1" />

    <Button
        android:id="@+id/btTwenty"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btFifteen"
        android:layout_alignParentRight="true"
        android:layout_marginRight="24dp"
        android:text="@string/button_value2" />

    <TextView
        android:id="@+id/tvTipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTipAmt"
        android:layout_alignBottom="@+id/tvTipAmt"
        android:layout_alignLeft="@+id/btTen"
        android:text="@string/static_tip_header"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvTipAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btFifteen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:text="@string/default_tip_amount"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvTipComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTipAmt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/default_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
